src/test/deca/context/invalid/created/affect_NULL/INT.deca
// Description:
//		Affecter null a un int
// Resultats:
//		Erreur contexte Ligne 7 : Types don't match!

{
	int x = null;
}
